[project]
name = "leetcode"
version = "0.1.0"
description = "Leetcode problems solutions using Python"
authors = [{name = "Yirui Liang", email = "41648750+liangyirui@users.noreply.github.com"}]
requires-python = ">=3.12.0,<3.13.0"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
leetcode = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
